--- a/event/styles.css
+++ b/event/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Pixelify Sans', sans-serif;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
@@ -80,7 +80,6 @@ input[type="number"] {
     margin: 5px 0;
 }
 
-/* Стили для match, чтобы соответствовать фото */
 .match-option {
     display: flex;
     align-items: center;
