--- a/event/styles.css
+++ b/event/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Pixelify Sans', sans-serif;
+    font-family: 'DotGothic16', sans-serif;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
