--- a/project/styles.css
+++ b/project/styles.css
@@ -106,16 +106,12 @@ h1, h2, h3 {
     margin: 0 10px;
 }
 
-/* Стили для таблицы расписания */
-.schedule-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-.schedule-table th, .schedule-table td {
-    border: 1px solid black;
+.selection-container input {
     padding: 8px;
-    text-align: left;
+    font-size: 16px;
+    border: 1px solid black;
+    background-color: white;
+    margin: 0 10px;
 }
 
 /* Стили для футера */
@@ -166,7 +162,9 @@ h1, h2, h3 {
     border: 1px solid white;
 }
 
-.dark-theme .schedule-table th, .dark-theme .schedule-table td {
+.dark-theme .selection-container input {
+    background-color: black;
+    color: white;
     border: 1px solid white;
 }
 
